RAPID_API notebook modified

--- a/src/RAPID_API.ipynb
+++ b/src/RAPID_API.ipynb
@@ -84,7 +84,9 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "813bc126",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1281,7 +1283,8 @@
     "\n",
     "response = requests.request(\"GET\", url, headers=headers)\n",
     "\n",
-    "print(response.text)"
+    "# print(response.text)\n",
+    "ㅔ갸"
    ]
   },
   {
@@ -1329,7 +1332,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "d274f3aa",
+   "id": "c76bc57e",
    "metadata": {},
    "outputs": [
     {
@@ -2448,7 +2451,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "9d73843e",
+   "id": "a5d456fa",
    "metadata": {},
    "outputs": [
     {
@@ -2918,7 +2921,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "fcf7910f",
+   "id": "2fcaf75b",
    "metadata": {},
    "outputs": [
     {
@@ -3735,7 +3738,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "c185aa73",
+   "id": "5e6bd04a",
    "metadata": {},
    "outputs": [
     {
@@ -3939,7 +3942,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "fd3aadee",
+   "id": "872578cf",
    "metadata": {},
    "outputs": [
     {
@@ -7127,7 +7130,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "68cef92b",
+   "id": "43175e86",
    "metadata": {},
    "outputs": [
     {
@@ -8506,8 +8509,10 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "c2320b01",
-   "metadata": {},
+   "id": "37af01d5",
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
