--- a/RAPID_API_CNBC_stock_news.ipynb
+++ b/RAPID_API_CNBC_stock_news.ipynb
@@ -13,7 +13,9 @@
     "자동으로 API_KEY 부여 됩니다.\n",
     "\n",
     "response 결과는 깃에서 보기 너무 길어서 \n",
-    "생략했습니다."
+    "생략했습니다.\n",
+    "\n",
+    "** 샵 제거하고 보시면 됩니다"
    ]
   },
   {
@@ -70,7 +72,7 @@
    "outputs": [],
    "source": [
     "# RAPID_API KEY 설정 \n",
-    "api_key = os.getenv(\"RAPID_API\")"
+    "api_key = os.getenv(\"RAPID_API_KEY\")"
    ]
   },
   {
@@ -85,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 7,
    "id": "813bc126",
    "metadata": {},
    "outputs": [],
