--- a/src/RAPID_API_CNBC_stock_news.ipynb
+++ b/src/RAPID_API_CNBC_stock_news.ipynb
@@ -70,7 +70,7 @@
    "outputs": [],
    "source": [
     "# RAPID_API KEY 설정 \n",
-    "api_key = os.getenv(\"RAPID_API\")"
+    "api_key = os.getenv(\"RAPID_API_KEY\")"
    ]
   },
   {
