--- a/src/investpy.ipynb
+++ b/src/investpy.ipynb
@@ -9,6 +9,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# requirements.txt\n",
+    "!pip install investpy\n",
+    "!pip install matplotlib\n",
+    "!pip install seaborn"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
