Add requirements for stockus scraping

--- a/src/scraping_stockus.ipynb
+++ b/src/scraping_stockus.ipynb
@@ -20,16 +20,28 @@
     "\n",
     "from bs4 import BeautifulSoup\n",
     "import requests\n",
-    "\n",
-    "from konlpy.tag import Okt\n",
-    "from nltk.corpus import stopwords\n",
     "import re\n",
     "\n",
     "from itertools import chain\n",
     "from collections import Counter\n",
     "from datetime import datetime, date\n",
     "from wordcloud import WordCloud\n",
-    "import investpy as inv"
+    "import investpy as inv\n",
+    "\n",
+    "try:\n",
+    "    from nltk.corpus import stopwords\n",
+    "    stop_words = stopwords.words('korean')\n",
+    "except Exception as e:\n",
+    "    print(e)\n",
+    "    print('try nltk.download() and copy under to ~/nltk/corpora/stopwords/korean')\n",
+    "    print('https://github.com/minyeamer/minyeamer/blob/main/bins/korean')\n",
+    "    stop_words = list()\n",
+    "\n",
+    "try:\n",
+    "    from konlpy.tag import Okt\n",
+    "    okt = Okt()\n",
+    "except:\n",
+    "    print('please install JVM')"
    ]
   },
   {
@@ -352,8 +364,6 @@
     }
    ],
    "source": [
-    "stop_words = stopwords.words('korean')\n",
-    "\n",
     "def ko_tokenize(sequence: str):\n",
     "    okt = Okt()\n",
     "    tokenized = okt.morphs(sequence)\n",
@@ -830,8 +840,6 @@
     }
    ],
    "source": [
-    "\n",
-    "\n",
     "user_word_cloud = WordCloud(font_path='/System/Library/Fonts/Supplemental/AppleGothic.ttf',\n",
     "                        max_words=100, width=2000, height=1000,\n",
     "                        prefer_horizontal= 1.0, background_color='white')\n",
