--- a/src/google_news.ipynb
+++ b/src/google_news.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "17e56348",
+   "id": "7f56fcf6",
    "metadata": {},
    "source": [
     "- https://pypi.org/project/GoogleNews/\n",
@@ -12,7 +12,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "4cadb043",
+   "id": "cfb13a88",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "41feeb46",
+   "id": "72eb3a3e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "52c075f1",
+   "id": "37b22fbb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "66411b9f",
+   "id": "2205452c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "fb4d71a2",
+   "id": "19b6a1d7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "9db94991",
+   "id": "f7597ede",
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +103,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "85191c47",
+   "id": "b24307ef",
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +124,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "a03bbdfc",
+   "id": "8bb992d8",
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "88998aa2",
+   "id": "2cedef21",
    "metadata": {},
    "source": [
     "## UTC 시간인거 같음!\n"
@@ -172,7 +172,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "0af64e90",
+   "id": "d6a678b0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +189,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "de78bbbb",
+   "id": "5b25c4aa",
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +219,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "cb49aecf",
+   "id": "84f1568f",
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +240,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "b4be6e53",
+   "id": "431a20b5",
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +261,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "c98e993b",
+   "id": "16d25ae0",
    "metadata": {
     "scrolled": false
    },
@@ -293,7 +293,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "5cff895f",
+   "id": "bdc5cc35",
    "metadata": {},
    "outputs": [
     {
@@ -323,7 +323,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "2cf4d021",
+   "id": "450a9e82",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -340,7 +340,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "8712e772",
+   "id": "290bcd21",
    "metadata": {},
    "outputs": [
     {
@@ -370,7 +370,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "0ddbdecb",
+   "id": "3c798d7b",
    "metadata": {},
    "outputs": [
     {
@@ -386,6 +386,237 @@
    ],
    "source": [
     "googlenews.url"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "54d2a13b",
+   "metadata": {},
+   "source": [
+    "# with time\n",
+    "\n",
+    "- 날짜에 따라는 변하지만\n",
+    "- 시간에 따라 결과는 변하지 않음"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "d5ddfa01",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import datetime as dt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "527630dc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dt.datetime('2020')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "id": "6af8de0d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['The year for Bitcoin: A 2021 roundup of the flagship crypto',\n",
+       " 'How does bitcoin correlate with U.S. dollar? (Cryptocurrency ...',\n",
+       " 'Unknown whale swiftly moves $432 million worth of Bitcoin',\n",
+       " 'Bitcoin starts 2022 at $47.2K as fresh research pins performance on China trader exodus',\n",
+       " 'Bitcoin Stock-to-flow model invalidated as BTC closes 2021 below $100,000',\n",
+       " \"Gold Bug Peter Schiff Claims Bitcoin's Yearly Gain of 60 ...\",\n",
+       " 'Bitcoin Bull Anthony Pompliano Lays Out Crypto Outlook for 2022, Says BTC Could Be Correlated to This Surpr...',\n",
+       " 'In 2022, Workers Will Be Paid In Bitcoin And Cryptocurrency',\n",
+       " 'Survey: Only 24% Think Bitcoin Price Will Be Below $50K By End of 2022',\n",
+       " 'El precio de Bitcoin comienza el 2022 en USD 47,200, y una nueva investigación atribuye el rendimiento al éxodo de los traders de China']"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "start = \"2022-01-01T02:00:00+00:00\"\n",
+    "end = \"2022-01-01T04:00:00+00:00\"\n",
+    "\n",
+    "googlenews.clear()\n",
+    "\n",
+    "googlenews = GoogleNews(start=start,end=end)\n",
+    "googlenews.search('BTC')\n",
+    "result = googlenews.get_texts()\n",
+    "result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "id": "720bdf3d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['The year for Bitcoin: A 2021 roundup of the flagship crypto',\n",
+       " 'How does bitcoin correlate with U.S. dollar? (Cryptocurrency ...',\n",
+       " 'Unknown whale swiftly moves $432 million worth of Bitcoin',\n",
+       " 'Bitcoin starts 2022 at $47.2K as fresh research pins performance on China trader exodus',\n",
+       " 'Bitcoin Stock-to-flow model invalidated as BTC closes 2021 below $100,000',\n",
+       " \"Gold Bug Peter Schiff Claims Bitcoin's Yearly Gain of 60 ...\",\n",
+       " 'Bitcoin Bull Anthony Pompliano Lays Out Crypto Outlook for 2022, Says BTC Could Be Correlated to This Surpr...',\n",
+       " 'In 2022, Workers Will Be Paid In Bitcoin And Cryptocurrency',\n",
+       " 'Survey: Only 24% Think Bitcoin Price Will Be Below $50K By End of 2022',\n",
+       " 'El precio de Bitcoin comienza el 2022 en USD 47,200, y una nueva investigación atribuye el rendimiento al éxodo de los traders de China']"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "start = \"2022-01-01T04:00:00+00:00\"\n",
+    "end = \"2022-01-01T06:00:00+00:00\"\n",
+    "\n",
+    "googlenews.clear()\n",
+    "\n",
+    "googlenews = GoogleNews(start=start,end=end)\n",
+    "googlenews.search('BTC')\n",
+    "result = googlenews.get_texts()\n",
+    "result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "id": "6f15f4cf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['The year for Bitcoin: A 2021 roundup of the flagship crypto',\n",
+       " 'How does bitcoin correlate with U.S. dollar? (Cryptocurrency ...',\n",
+       " 'Unknown whale swiftly moves $432 million worth of Bitcoin',\n",
+       " 'Bitcoin starts 2022 at $47.2K as fresh research pins performance on China trader exodus',\n",
+       " 'Bitcoin Stock-to-flow model invalidated as BTC closes 2021 below $100,000',\n",
+       " \"Gold Bug Peter Schiff Claims Bitcoin's Yearly Gain of 60 ...\",\n",
+       " 'Bitcoin Bull Anthony Pompliano Lays Out Crypto Outlook for 2022, Says BTC Could Be Correlated to This Surpr...',\n",
+       " 'In 2022, Workers Will Be Paid In Bitcoin And Cryptocurrency',\n",
+       " 'Survey: Only 24% Think Bitcoin Price Will Be Below $50K By End of 2022',\n",
+       " 'El precio de Bitcoin comienza el 2022 en USD 47,200, y una nueva investigación atribuye el rendimiento al éxodo de los traders de China']"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "start = \"2022-01-01T06:00:00+00:00\"\n",
+    "end = \"2022-01-01T08:00:00+00:00\"\n",
+    "\n",
+    "googlenews.clear()\n",
+    "\n",
+    "googlenews = GoogleNews(start=start,end=end)\n",
+    "googlenews.search('BTC')\n",
+    "result = googlenews.get_texts()\n",
+    "result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "id": "180555dc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "googlenews.clear()\n",
+    "\n",
+    "googlenews = GoogleNews(start='01/01/2022',end='01/01/2022')\n",
+    "googlenews.search('BTC')\n",
+    "googlenews.set_lang('ko')\n",
+    "# googlenews.get_page()\n",
+    "\n",
+    "result = googlenews.get_texts()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "id": "4f69927f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['The year for Bitcoin: A 2021 roundup of the flagship crypto',\n",
+       " 'How does bitcoin correlate with U.S. dollar? (Cryptocurrency ...',\n",
+       " 'Unknown whale swiftly moves $432 million worth of Bitcoin',\n",
+       " 'Bitcoin starts 2022 at $47.2K as fresh research pins performance on China trader exodus',\n",
+       " 'Bitcoin Stock-to-flow model invalidated as BTC closes 2021 below $100,000',\n",
+       " \"Gold Bug Peter Schiff Claims Bitcoin's Yearly Gain of 60 ...\",\n",
+       " 'Bitcoin Bull Anthony Pompliano Lays Out Crypto Outlook for 2022, Says BTC Could Be Correlated to This Surpr...',\n",
+       " 'In 2022, Workers Will Be Paid In Bitcoin And Cryptocurrency',\n",
+       " 'Survey: Only 24% Think Bitcoin Price Will Be Below $50K By End of 2022',\n",
+       " 'El precio de Bitcoin comienza el 2022 en USD 47,200, y una nueva investigación atribuye el rendimiento al éxodo de los traders de China']"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "id": "8a87d8ce",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Bitcoin price closes in on $40K, but pro traders are still skeptical',\n",
+       " 'MicroStrategy (MSTR) Bought $25 Million in Bitcoin (BTC ...',\n",
+       " 'MicroStrategy Purchased 660 More BTC for $25 Million',\n",
+       " 'Michael Saylor: MicroStrategy Exploring Options to Use Its ...',\n",
+       " 'Bitcoin: Delusions of money',\n",
+       " 'The Bitcoin Nation: El Salvador Has Ambitious Plans for Cryptocurrency',\n",
+       " '$2.5B in stolen BTC from Bitfinex hack awakens',\n",
+       " 'NYDIG Launches Service for Workers to Get Paid in Bitcoin',\n",
+       " \"Fidelity: Bitcoin is a 'superior form of money'\",\n",
+       " 'Bitcoin (BTC) Daily RSI Gives Signal That Historically ...']"
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "googlenews.clear()\n",
+    "\n",
+    "googlenews = GoogleNews(start='02/01/2022',end='02/01/2022')\n",
+    "googlenews.search('BTC')\n",
+    "googlenews.set_lang('ko')\n",
+    "# googlenews.get_page()\n",
+    "\n",
+    "result = googlenews.get_texts()\n",
+    "result"
    ]
   }
  ],
